# mosaic

./: .coveragerc  .env.example  .gitignore  .gitmodules  1.0_*_BIPEDAL_WALKER_GAME_NOTE.md  1.0_*_CAR_RACING_GAME_NOTE.md  1.0_*_CLIFF_WALKING_GAME_NOTE.md  1.0_*_LUNAR_LANDER_GAME_NOTE.md  1.0_*_TAXI_GAME_NOTE.md  1.0_DAY_0_INITIAL_PLAN.md  1.0_DAY_2_QT_SHELL_AND_MODE_SELECTOR.md  1.0_DAY_3_QT_SHELL_GAME_INTEGRATION.md  1.0_DAY_4_QT_SHELL_LAYOUT_AND_PANEL_DESIGN.md  1.0_DAY_5_CURRENT_DESIGN_ERROR_AND_PROPOSED_SOLUTIONS.md  1.0_DAY_5_CURRENT_DESIGN_PROGRESS.md  1.0_DAY_7_AGENT_RL_INTEGERATION.md  1.0_DAY_7_TRAINER_ORCHESTRATION_BLUEPRINT.md  1.0_DAY_7_TRAINER_ORCHESTRATION_PHASE_1.md  1.0_DAY_7_TRAINER_ORCHESTRATION_PHASE_2.md  1.0_DAY_8_TELEMETRY_PLAN.md  1.0_DAY_8_WORKER_INTEGRATION_COMPLETE.md  1.0_DAY_9_TELEMETRY_IMPLEMENTATION.md  1.1_CODING_PRACTICE_1_OPENSHOT_QT.md  1.2_CODING_PRACTICE_2_PyQt5-APPS.md  1.4_CODING_PRACTICE_QTPY.md  1.7_CODING_PRACTICES_QT_6_OFFICIAL.md  CLeanRL_High_Quality_Single_File_Implementation_Of_Deep_Reinforcement_Learning_Algorithms.md  MANIFEST.in  Makefile  PLAN.md  POTENTIALS.md  README.md  _vizdoom.ini  codecov.yml  mosaic.spec  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  run.sh
.github/workflows/: ci.yml
JASON_GRPC_BIDI_PYTHON/: requirements.txt  run_bridge_demo.sh
JASON_GRPC_BIDI_PYTHON/JASON_java_project/: settings.gradle
JASON_GRPC_BIDI_PYTHON/docs/: GRPC_JASON_BRIDGE.md  JASON_GRPC_BIDI_PYTHON.drawio  README.md
JASON_GRPC_BIDI_PYTHON/proto/: agent_bridge.proto
JASON_GRPC_BIDI_PYTHON/python_project/: server.py
JASON_GRPC_BIDI_PYTHON/tools/: generate_python_protos.sh
cleanrl_worker/: __init__.py  pyproject.toml  runtime.py
cleanrl_worker/MOSAIC_CLEANRL_WORKER/: launcher.py  runtime.py
cleanrl_worker/tests/: test_runtime.py
docs/: INSTALLATION_GUIDE.md  Makefile  requirements.txt
docs/1.0_A_GAMES_SPECIFICATIONS/: 1.0_*_FROZEN_LAKE_GAME_NOTE.md  1.0_*_LUNAR_LANDER_GAME_NOTE.md  1.0_*_TAXI_GAME_NOTE.md
docs/1.0_A_REFERENCE_TO_EXTERNAL_DOCS/: FROZEN_LAKE_GYMNASIUM_DOCS.md  Public_Opinion.md  VALKKA-DOCS.md  asyncio_subprocess_deadlock.md  protobuf_python_tutorial.md  qt_qthread_doc.md  valkka_debugging.md  valkka_pitfalls.md  valkka_qt_notes.md  valkka_valkkafs.md  zeromq_chapter5_pub_sub.md
docs/1.0_CODING_PRACTICES/: 1.0_DAY_6_CLEANRL_LOGGING_ANALYSIS.md  1.3_CODING_PRACTICE_3_PYGRAPH.md  1.5_CODING_PRACTICE_QT_PYTHON_MVC.md  1.6_CODING_PRACTICE_QT_MATERIAL.md
docs/1.0_DAY_10/: 1.0_DAY_10_BDI_INTEGRATION_COMPLETE.md  1.0_DAY_10_BDI_MODE_ENABLE_SOLUTION.md  1.0_DAY_10_COMPLETE_SUMMARY.md  1.0_DAY_10_COMPREHENSIVE_DEBUG_AND_ABSTRACTION.md  1.0_DAY_10_DATABASE_RECOVERY_FIX.md
docs/1.0_DAY_11/: ANALYSIS_DYNAMIC_AGENT_TABS_AND_IMAGE_NAMING.md  CREDIT_BASED_BACKPRESSURE_IMPLEMENTATION.md  CRITICAL_ARCHITECTURE_ANALYSIS.md  LOGGING_ARCHITECTURE_ANALYSIS.md  PUB_SUB_BUS_ARCHITECTURE.md  RAY_ARCHITECTURE_DEEP_DIVE.md  STREAMS_INTEGRATION_CHECKLIST.md  STREAMS_RECOVERY_SUMMARY.md  STREAMS_TO_LIVE_TAB_CONNECTION_GUIDE.md  TRAINING_SPEED_AND_ENV_FIX_SUMMARY.md
docs/1.0_DAY_12/: COMPREHENSIVE_TELEMETRY_ANALYSIS.md  EXPLANATION_WHAT_CHANGED.md  IMPLEMENTATION_GUIDE.md  TASK_LIST_SUMMARY.md  TROUBLESHOOTING_GUIDE.md
docs/1.0_DAY_13/: ASSET_LAYERING_STRATEGY.md  INVESTIGATION_SUMMARY.md  VISUAL_BUG_BREAKDOWN.md
docs/1.0_DAY_17/: HOTFIX_TAB_DELETION_SQLITE_TRANSACTION_BUG.md  TASK_6_ULID_MIGRATION.md
docs/1.0_DAY_18/: TASK_5B_FAST_TRAINING_MODE.md
docs/1.0_DAY_19/: control_panel_tabbed_layout.md
docs/1.0_DAY_1_INITIAL_PLAN/: 1.0_DAY_1_ADAPTER_BASE_TOY_TEXT.md
docs/1.0_DAY_3/: 1.0_CONFIGURATION_MODE_AGENT_ONLY.md  1.0_CONFIGURATION_MODE_HUMAN_ONLY.md  1.0_SPADE_BDI_ORIGINAL_VS_REFACTORED_COMPRISON.md
docs/1.0_DAY_4/: 1.0_DAY_4_QT_SHELL_LAYOUT_AND_PANEL_DESIGN.md
docs/1.0_DAY_5/: 1.0_DAY_5_CURRENT_DESIGN_ERROR_AND_PROPOSED_SOLUTIONS.md  1.0_DAY_5_CURRENT_DESIGN_PROGRESS.md
docs/1.0_DAY_7/: 1.0_DAY_7_GYMNASIUM_RecordVideo_COMPARED_WITH_GYM_GUI.md  1.0_DAY_7_TRAINER_ORCHESTRATION_DEVELOPMENT_PLAN.md  1.0_DAY_7_TRAINER_ORCHESTRATION_PRE_GUI_FIXES.md
docs/1.0_DAY_8/: 1.0_DAY_8_BDI_AGENT_TESTING_FINDINGS.md  1.0_DAY_8_FROZENLAKE_V2_INTEGRATION.md  1.0_DAY_8_INMEMORY_SQLITE.md  1.0_DAY_8_MATPLOTLIB_REMOVAL_AND_TESTING.md  1.0_DAY_8_QUICK_START_TRAINER_ORCHESTRATION.md  1.0_DAY_8_SPADE_BDI_AND_AGENT_LOADOUT_ROADMAP.md  1.0_DAY_8_TELEMETRY_LIVE_STREAMING_IMPLEMENTATION.md  1.0_DAY_8_TELEMETRY_PLAN.md  1.0_DAY_8_WORKER_TELEMETRY_INTEGRATION_GUIDE.md
docs/1.0_DAY_9/: 1.0_DAY_9_PROBLEMS.md  1.0_DAY_9_TELEMETRY_IMPLEMENTATION.md
docs/plans/: 2026-02-15-rware-implementation-plan.md  2026-02-15-rware-integration-design.md
docs/reports/: mujoco_mpc_installation_guide.md  optional_dependencies_refactor.md
docs/source/: conf.py  index.rst
docs/workers/: MIGRATION_GUIDE.md  WORKER_DEVELOPMENT_GUIDE.md
gym_gui/: README.md  __init__.py  __main__.py  app.py
gym_gui/Algo_docs/: __init__.py
memory-bank/: 3.0_GUI_PYQT6_DESIGN_SPECIFICATION.md
references/: CLeanRL_High_Quality_Single_File_Implementation_Of_Deep_Reinforcement_Learning_Algorithms.md  man7_unix7.md  qt_qthread_doc.md  sqlite_wal_checkpointing.md  valkka_debugging.md  valkka_pitfalls.md  valkka_qt_notes.md  valkka_requirements.md  valkka_valkkafs.md
requirements/: airsim_worker.txt  babaisai.txt  balrog_worker.txt  barlog_worker.txt  base.txt  chat.txt  cleanrl_worker.txt  crafter.txt  godot_worker.txt  griddly.txt  jason_worker.txt  llm_worker.txt  meltingpot.txt  minigrid.txt  mosaic_llm_worker.txt  mosaic_multigrid.txt  mosaic_passive_worker.txt  mosaic_random_worker.txt  mosaic_vlm_worker.txt  mujoco_mpc_worker.txt  multigrid.txt  multigrid_ini.txt  nethack.txt  neuralmmo.txt  overcooked.txt  pettingzoo.txt  ray_worker.txt  rware.txt  smac.txt  smacv2.txt  spade_bdi_worker.txt  textworld.txt  vizdoom.txt  xuance_worker.txt
spadeBDI_RL_refactored/: README.md  worker.py
spade_bdi_rl/: __init__.py  constants.py  worker.py
spade_bdi_worker/: worker.py
tools/: generate_cleanrl_schemas.py  generate_protos.sh
var/: README.md
(+1179 files in other folders)
