[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mosaic"
version = "0.1.0"
description = "MOSAIC: Multi-Agent Orchestration System with Adaptive Intelligent Control for Heterogeneous Agent Workloads"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Dr. Abdulhamid Mousa", email = "mousa.abdulhamid@bit.edu.cn"}
]
keywords = [
    "reinforcement-learning",
    "multi-agent",
    "gymnasium",
    "pettingzoo",
    "bdi",
    "orchestration",
    "pyqt6",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies - ONLY what's needed to launch the GUI
# No gymnasium environments here - those are optional
dependencies = [
    # Environment configuration
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",

    # Qt GUI framework
    "PyQt6>=6.7.0",
    "qtpy>=2.4.0",
    "qasync>=0.27.0",

    # Core utilities
    "packaging>=24.0",
    "jsonschema>=4.20.0",
    "pydantic>=2.0.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",

    # gRPC for trainer communication
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",

    # Run ID generation
    "python-ulid>=2.0.0",

    # HDF5 for replay storage (frames, observations)
    "h5py>=3.10.0",
]

[project.optional-dependencies]
# =============================================================================
# Environment Families (additive - install what you need)
# =============================================================================

# Gymnasium core (needed for most environment families)
gymnasium = ["gymnasium>=0.29.0"]

# Box2D environments (LunarLander, BipedalWalker, CarRacing)
box2d = [
    "gymnasium[box2d]>=0.29.0",
]

# MuJoCo environments (Ant, HalfCheetah, Humanoid, etc.)
mujoco = [
    "gymnasium[mujoco]>=0.29.0",
]

# Atari environments (Breakout, Pong, SpaceInvaders, etc.)
atari = [
    "gymnasium[atari]>=0.29.0",
    "autorom[accept-rom-license]>=0.6.0",
]

# MiniGrid environments (grid-world navigation)
minigrid = [
    "gymnasium>=0.29.0",
    "minigrid>=2.0.0,<3.0.0",
]

# PettingZoo multi-agent environments (Chess, Go, MPE, etc.)
pettingzoo = [
    "pettingzoo[classic,butterfly,mpe,sisl]>=1.24.0",
    "supersuit>=3.9.0",
    "stockfish>=3.28.0",
    # pymunk 7.x removed add_collision_handler() API used by waterworld
    "pymunk>=6.0.0,<7.0.0",
]

# ViZDoom FPS environments
vizdoom = [
    "vizdoom>=1.2.0,<2.0.0",
]

# NetHack Learning Environment (NLE) + MiniHack
# Requires system dependencies: build-essential, cmake, flex, bison
nethack = [
    "nle>=0.9.0",
    "minihack>=0.1.5",
]

# Crafter open-world survival benchmark (Hafner 2022, ICLR)
# Paper: "Benchmarking the Spectrum of Agent Capabilities"
crafter = [
    "crafter>=1.8.0",
]

# Procgen procedurally generated benchmark (Cobbe et al. 2019)
# Paper: "Leveraging Procedural Generation to Benchmark RL"
# 16 environments for testing generalization: coinrun, starpilot, etc.
# NOTE: Official procgen only has wheels for Python 3.7-3.10.
# For Python 3.11+, we use procgen-mirror which provides community wheels.
procgen = [
    "procgen>=0.10.7; python_version < '3.11'",
    "procgen-mirror>=0.10.7; python_version >= '3.11'",
]

# =============================================================================
# Workers (training backends)
# =============================================================================

# CleanRL worker for RL training
cleanrl = [
    "torch>=2.0.0",
    "tensorboard>=2.11.0",
    "wandb>=0.22.3",
    "tyro>=0.5.0",
    "tenacity>=8.0.0",
    "moviepy>=1.0.3",
]

# MuJoCo MPC worker (also requires building C++ binary)
mujoco-mpc = [
    "mujoco>=3.0.0",
]

# Godot worker (binary included in 3rd_party/godot_worker/bin/)
godot = [
    # Optional: godot-rl for Python RL bridge
    # "godot-rl>=0.6.0",
]

# SPADE BDI worker
spade-bdi = [
    "spade>=4.0.0",
    "spade-bdi>=0.3.0",
]

# LLM Chat UI (OpenRouter cloud + vLLM local)
# Enables the Chat panel in the GUI for interacting with LLMs
# vLLM is the standard for local GPU inference (like BALROG)
chat = [
    "requests>=2.31.0",
]

# Ray/RLlib worker for distributed RL training
ray-rllib = [
    "ray[rllib]>=2.9.0",
    "ray[tune]>=2.9.0",
    "torch>=2.0.0",
    "tensorboard>=2.11.0",
    "dm-tree>=0.1.8",
]

# XuanCe worker for MARL training
xuance = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "scipy>=1.5.0",
    "pygame>=2.1.0",
    "tqdm>=4.66.0",
    "tensorboard>=2.11.0",
    "wandb>=0.15.3",
    "moviepy==1.0.3",
    "imageio>=2.9.0",
    "opencv-python>=4.5.0",
    "mpi4py>=3.1.0",
]

# =============================================================================
# Development & Testing
# =============================================================================

dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pyright>=1.1.0",
]

# =============================================================================
# Convenience Bundles
# =============================================================================

# All Gymnasium single-agent environments
all-gymnasium = [
    "mosaic[box2d,mujoco,atari,minigrid]",
]

# All environment families (single + multi-agent)
all-envs = [
    "mosaic[box2d,mujoco,atari,minigrid,pettingzoo,vizdoom,nethack,crafter,procgen]",
]

# Full development setup
full = [
    "mosaic[all-envs,cleanrl,dev]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gym_gui*"]

[project.urls]
Homepage = "https://github.com/Abdulhamid97Mousa/MOSAIC"
Repository = "https://github.com/Abdulhamid97Mousa/MOSAIC"
Documentation = "https://mosaic-multi-agent-orchestration-system.readthedocs.io/"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
