[project]
name = "cleanrl-worker"
version = "0.1.0"
description = "CleanRL worker integration for the MOSAIC trainer runtime."
readme = "README.md"
authors = [{ name = "GUI_BDI_RL Team" }]
requires-python = ">=3.10"
dependencies = [
    "tensorboard>=2.10.0",
    "wandb>=0.13.11",
    "torch>=2.0.0",
    "tyro>=0.5.10",
    "tenacity>=8.2.2",
]

[project.optional-dependencies]
atari = [
    "ale-py>=0.8.1",
    "AutoROM[accept-rom-license]~=0.4.2",
    "opencv-python>=4.6.0.66,<5",
    "shimmy>=1.1.0",
]
envpool = ["envpool>=0.6.4,<0.7", "opencv-python>=4.6.0.66,<5"]
procgen = ["procgen>=0.10.7,<0.11"]
mujoco = [
    "mujoco<=2.3.3",
    "imageio>=2.14.1,<3",
]

[tool.setuptools.packages.find]
include = ["cleanrl_worker", "cleanrl", "cleanrl_utils"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
